# ocpp-proxy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml.example
.kiro/specs/ocpp-proxy-ha-integration/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
deploy/: ecs-task-definition.json
src/: config.rs  downstream.rs  error.rs  forwarder.rs  health.rs  lib.rs  logging.rs  main.rs  models.rs  mqtt.rs  shutdown.rs  state.rs  upstream.rs
tests/: property_backoff.rs  property_buffer_eviction.rs  property_charge_point_id.rs  property_config_missing.rs  property_config_precedence.rs  property_config_validation.rs  property_connection_replacement.proptest-regressions  property_connection_replacement.rs  property_frame_parsing.rs  property_health_response.rs  property_health_status.rs  property_log_format.rs  property_message_ordering.rs  property_mqtt_buffer.rs  property_mqtt_payload.rs  property_mqtt_status.rs  property_mqtt_topic.rs  property_subprotocol.rs
