[package]
name = "ocpp-proxy"
version = "0.1.0"
edition = "2021"
description = "OCPP 1.6J WebSocket proxy with MQTT publishing for Home Assistant"
license = "MIT"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = "0.14.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
async-trait = "0.1.88"

[dev-dependencies]
proptest = "1.6.0"
tempfile = "3.15.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
